--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/Bazury/questappka?user=postgres&password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres123
 
+#create-drop - tworzy tabele przy starcie aplikacji i usuwa je przy jej zamknieciu
+#update - aktualizuje tabele przy starcie aplikacji
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
+server.error.include-message=always
