--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Bazury/questappka?user=postgres&password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/questappka?user=postgres&password=heport123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=postgres123
+spring.datasource.password=heport123
 
 #create-drop - tworzy tabele przy starcie aplikacji i usuwa je przy jej zamknieciu
 #update - aktualizuje tabele przy starcie aplikacji
