--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,8 +1,9 @@
 name: Maven Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -13,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -23,12 +25,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
-    - name: Run SpotBugs
-      run: mvn spotbugs:check
-
-    - name: Run Checkstyle
-      run: mvn checkstyle:check
 
     - name: Run Tests
       run: mvn test
@@ -42,9 +38,21 @@ jobs:
 
     - name: Generate Unit Test Report
       run: mvn surefire-report:report
+      # Upload test report as an artifact
+      if: success()
+      uses: actions/upload-artifact@v2
+      with:
+        name: surefire-reports
+        path: target/site/surefire-report
 
     - name: Generate Integration Test Report
       run: mvn failsafe-report:report
+      # Upload test report as an artifact
+      if: success()
+      uses: actions/upload-artifact@v2
+      with:
+        name: failsafe-reports
+        path: target/site/failsafe-report
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
