--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,55 +1,24 @@
-name: Maven Package
+
+name: Questappka
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github
-        settings-path: ${{ github.workspace }}
-
+        java-version: '1.8'
+        distribution: 'adopt'
+        cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Run SpotBugs
-      run: mvn spotbugs:check
-
-    - name: Run Checkstyle
-      run: mvn checkstyle:check
-
-    - name: Run Tests
-      run: mvn test
-
-    - name: Check Test Results
-      run: |
-        if [ $? -ne 0 ]; then
-          echo "Tests failed. Workflow will be marked as failed."
-          exit 1
-        fi
-
-    - name: Generate Unit Test Report
-      run: mvn surefire-report:report
-
-    - name: Generate Integration Test Report
-      run: mvn failsafe-report:report
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      if: success()
+      run: mvn clean install
