--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,7 @@
 				<version>${project.parent.version}</version>
 			</plugin>
 		</plugins>
+		<finalName>questappka</finalName>
 	</build>
 
 </project>
