--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,10 @@ jobs:
       run: cd backend && mvn clean install
 
     - name: Log to Docker
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" && echo "${{ secrets.DOCKER_USERNAME }}"
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
       
 
     - name: Build & push Docker image
